<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/today"
            android:icon="@drawable/ic_today"
            android:title="@string/today" />
        <item
            android:id="@+id/tomorrow"
            android:icon="@drawable/ic_tomorrow"
            android:title="@string/tomorrow" />
        <item
            android:id="@+id/important"
            android:icon="@drawable/ic_important"
            android:title="@string/important" />
        <item
            android:id="@+id/work"
            android:icon="@drawable/ic_work"
            android:title="@string/work" />
        <item
            android:id="@+id/social"
            android:icon="@drawable/ic_social"
            android:title="@string/social" />
    </group>
</menu>
