<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/ic_awan_besar"
    tools:context="alexgochi.wedo.activity.TodayActivity">

    <!-- Editext for Search -->
    <EditText
        android:id="@+id/inputSearch"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/search_todo"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:inputType="textVisiblePassword" />

    <android.support.v7.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:cardUseCompatPadding="true"
        app:contentPadding="12dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/today"
                android:textSize="20sp"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/today"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_centerInParent="true"
                android:contentDescription="@string/todo"
                android:src="@drawable/ic_add" />

        </RelativeLayout>
    </android.support.v7.widget.CardView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <android.support.v7.widget.CardView
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            app:cardUseCompatPadding="true"
            app:contentPadding="12dp"
            app:cardBackgroundColor="@android:color/transparent">

            <TextView
                android:id="@+id/total_today"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="15sp" />

        </android.support.v7.widget.CardView>

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="passData"
            android:background="@color/colorPrimary"
            android:text="Home" />

    </LinearLayout>

    <com.baoyz.swipemenulistview.SwipeMenuListView
        android:id="@+id/list_today"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

</LinearLayout>
